update new files

--- a/css/postal-code-search-box.css
+++ b/css/postal-code-search-box.css
@@ -1,11 +1,23 @@
-#inputFlightCodeID {
-    position: absolute;
+ #inputFlightCodeID {
+    /* position: absolute; */
     max-width: 100%;
     width: 30rem;
 } 
 
 #inputPostalCodeID {
-    position: absolute;
+    /* position: relative; */
     max-width: 100%;
     width: 30rem;
-} 
+}  
+
+#inputcityCodeID {
+    /* position: relative; */
+    max-width: 100%;
+    width: 30rem;
+}  
+
+#inputAirportCodeID {
+    /* position: relative; */
+    max-width: 100%;
+    width: 30rem;
+}  
