update new files

--- a/css/postal-code-search-box.css
+++ b/css/postal-code-search-box.css
@@ -21,3 +21,15 @@
     max-width: 100%;
     width: 30rem;
 }  
+
+#input_arrival_airline_CodeID {
+    /* position: relative; */
+    max-width: 100%;
+    width: 30rem;
+}  
+
+#input_arrival_airport_CodeID {
+    /* position: relative; */
+    max-width: 100%;
+    width: 30rem;
+}  
